# teiniker-lectures-embedded-softwaredesign

./: .gitignore  README.md
architectural-patterns/client-server/: README.md
architectural-patterns/introduction/: README.md
architectural-patterns/layered/: README.md
architectural-patterns/message-oriented/: README.md
architectural-patterns/microservices/: README.md
architectures/: README.md
architectures/client-server/: HTTP.md  README.md
architectures/introduction/: README.md
architectures/layered/: ESP32-Layers.md  Embedded-C++.md  README.md
architectures/message-oriented/: MQTT.md  README.md
architectures/microservices/: README.md  REST.md
c++features/: README.md
c++features/CopyConstructor-User/: Makefile  README.md
c++features/Exception-Controller/: Makefile
c++features/Exception-Controller-Exercise/: TODO.txt
c++features/Exception-InputValidation/: Makefile
c++features/OperatorOverloading-Counter-Exercise/: Makefile  TODO.txt
c++features/OperatorOverloading-EEPROM/: Makefile
c++features/PointersAndReferences/: Makefile  README.md
c++features/SharedPointer-Mail/: Makefile  README.md
configuration-management/: README.md
configuration-management/building/cmake/book/: CMakeLists.txt  README.md  main.cpp
configuration-management/building/cmake/book-layout/: CMakeLists.txt  README.md
configuration-management/building/cmake/book-layout/src/: CMakeLists.txt  book.cpp
configuration-management/building/cmake/book-layout/test/: CMakeLists.txt  test.cpp
configuration-management/debugging/: README.md
configuration-management/introduction/: README.md
configuration-management/testing/: README.md
configuration-management/testing/googletest/test-ctest/: .gitignore  CMakeLists.txt  README.md  test.cpp
configuration-management/testing/googletest/test-fixture/: CMakeLists.txt  README.md  test.cpp
configuration-management/versioning/: Tagging.md
design-patterns/: Embedded.md  README.md
design-patterns/Composite-FileSystem/: Makefile
design-patterns/Composite-Packaging-Exercise/: TODO.txt
design-patterns/Proxy-FileService/: Makefile
design-patterns/Proxy-FileService-Exercise/: TODO.txt
design-patterns/Strategy-BubbleSort/: Makefile
design-patterns/behavioral/: README.md
design-patterns/creational/: README.md
design-patterns/introduction/: README.md
design-patterns/structural/: README.md
design-patterns/structural/facade/wrapper-facade/: CMakeLists.txt
design-patterns/structural/facade/wrapper-facade/include/: evaluator.h  evaluator_functions.h
design-patterns/structural/facade/wrapper-facade/src/: CMakeLists.txt  evaluator.cpp  evaluator_functions.cpp
design-patterns/structural/facade/wrapper-facade/test/: CMakeLists.txt  test.cpp
introduction/: README.md
modeling/: README.md
modeling/state-machine-diagram/: README.md
oo-design/: README.md
oo-design/ComplexNumber/: Makefile
oo-design/Directory/: Makefile
oo-design/EEPROM-Exercise/: TODO.txt
oo-design/Event/: Makefile
oo-design/FromStructToClass/: Makefile  README.md
oo-design/LCD-Exercise/: Makefile
oo-design/LCD-Namespaces-Exercise/: TODO.txt
oo-design/Namespaces/: Makefile
oo-design/Print-Exercise/: Makefile  TODO.txt
oo-design/SumOfSequence/: Makefile
oo-design/User-Exercise/: TODO.txt
oo-design/User-Inheritance-Exercise/: Makefile  (+1 more)
programming-c++/: README.md
programming-c++/oop/operator-overloading/operator-arithmetic/counter/: CMakeLists.txt  counter.cpp  counter.h  test.cpp
solid-principles/: README.md
uml/: README.md
(+861 files in other folders)
